--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -2,94 +2,145 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="ryuu">
   <title>Post</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-        crossorigin="anonymous">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link href="/css/posts/post-content.css" rel="stylesheet">
 </head>
 
 <body>
 
-<header th:replace="fragments/header :: header"></header>
+<header th:replace="header :: header">
+  Header
+  <hr>
+</header>
 
-<main class="container">
-  <header class="py-5 text-center">
-    <h1>first</h1>
+<main id="post-main" class="container" th:object="${post}">
+  <header id="post-header" class="py-5 text-center">
+    <h1 th:text="*{title}"></h1>
   </header>
 
   <div class="row g-5">
-    <section class="col-md-5 col-lg-4 order-md-last">
+    <section class="col-md-3 col-lg-4 order-md-last">
       <aside>
-        <p><span class="nick-name">Uno</span></p>
-        <p><a class="u-url" rel="me" href="mailto:bnsn@gmail.com">dggb@mail.com</a></p>
-        <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-        <p>java</p>
+        <p><span id="nickname" th:text="*{nickname}">User</span></p>
+        <p><a id="email" th:text="*{email}" href="mailto:testuser@gmail.com">user@email.com</a></p>
+        <p><time id="created-at" th:datetime="*{createdAt}" th:text="*{#temporals.format(createdAt, 'yyyy-MM-dd HH:mm:ss')}" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+        <p><span id="tag" th:each="tag : ${post.tags}" class="badge text-bg-secondary mx-1"><a class="text-reset" th:text="'#' + ${tag}"
+                                                                                               th:href="@{/posts(searchType=${searchTypeTag},searchValue=${tag})}">java</a></span></p>
       </aside>
     </section>
 
-    <article class="col-md-7 col-lg-8">
-      <p>Content<br><br></p>
+    <article id="post-content" class="col-md-9 col-lg-8">
+      <pre th:text="*{content}">Content</pre>
     </article>
+  </div>
+
+  <div class="row g-5" id="post-buttons" th:if="${#authorization.expression('isAuthenticated()')} and *{username} == ${#authentication.name}">
+    <form id="delete-post-form" th:action="'/posts/' + *{id} + '/delete'" th:method="post"> 
+      <div class="pb-5 d-grid gap-2 d-md-block">
+        <a class="btn btn-dark me-md-2" role="button" id="update-post" th:href="'/posts/' + *{id} + '/form'">Update</a>
+        <button class="btn btn-secondary me-md-2" type="submit">Delete</button>
+      </div>
+    </form>
   </div>
 
   <div class="row g-5">
     <section>
-      <form class="row g-3">
-        <div class="col-8">
-          <label for="comment-box" hidden>Comment</label>
-          <textarea class="form-control" id="comment-box" placeholder="..." rows="3"></textarea>
+      <form class="row g-3 comment-form" th:action="@{/comments/new}" th:method="post">
+        <input type="hidden" class="post-id" th:name="postId" th:value="*{id}" >
+        <div class="col-md-9 col-lg-8">
+          <label for="comment-textbox" hidden>Comment</label>
+          <textarea class="form-control comment-textbox" id="comment-textbox" placeholder="댓글 쓰기.." rows="3" required></textarea>
         </div>
-        <div class="col-auto">
-          <label for="comment-submit" hidden>Comment</label>
+        <div class="col-md-3 col-lg-4">
+          <label for="comment-submit" hidden>New Comment</label>
           <button class="btn btn-primary" id="comment-submit" type="submit">Submit</button>
         </div>
       </form>
 
-      <ul>
-        <li>
-          <div>
-            <time><small>2023-01-01</small></time>
-            <strong>Uno</strong>
-            <p>
-              Hello
-            </p>
-          </div>
-        </li>
-        <li>
-          <div>
-            <time><small>2023-01-01</small></time>
-            <strong>Uno</strong>
-            <p>
-              Hi
-            </p>
+      <ul id="post-comments" class="row col-md-10 col-lg-8 pt-3" th:remove="all-but-first">
+        <li class="parent-comment" th:each="comment : ${comments}">
+          <form class="comment-delete-form" th:action="'/comments/' + ${comment.id} + '/delete'" th:method="post">
+            <input type="hidden" class="post-id" th:name="postId" th:value="*{id}" >
+            <div class="row">
+              <div class="col-md-10 col-lg-9">
+                <strong th:text="${comment.nickname}">User</strong>
+                <small><time  th:datetime="${comment.createdAt}" th:text="${#temporals.format(comment.createdAt, 'yyyy-MM-dd HH:mm:ss')}">2022-01-01</time></small>
+                <p class="mb-1" th:text="${comment.content}">
+                  Hello
+                </p>
+              </div>
+              <div class="col-2 mb-3 align-self-center">
+                <button type="submit" class="btn btn-outline-danger" th:if="${#authorization.expression('isAuthenticated()')} and ${comment.username} == ${#authentication.name}">Delete</button>
+              </div>
+            </div>
+          </form>
+
+          <ul class="row me-0" th:if="${!comment.childComments.isEmpty()}" th:remove="all-but-first">
+            <li class="child-comment" th:each="childComment : ${comment.childComments}">
+              <form class="comment-delete-form" th:action="'/comments/' + ${childComment.id} + '/delete'" th:method="post">
+                <input type="hidden" class="post-id" th:name="postId" th:value="*{id}" >
+                <div class="row">
+                  <div class="col-md-10 col-lg-9">
+                    <strong th:text="${childComment.nickname}">User</strong>
+                    <small><time th:datetime="${childComment.createdAt}" th:text="${#temporals.format(childComment.createdAt, 'yyyy-MM-dd HH:mm:ss')}">2022-01-01</time></small>
+                    <p class="mb-1" th:text="${childComment.content}">
+                      Hello
+                    </p>
+                  </div>
+                  <div class="col-2 mb-3 align-self-center">
+                    <button type="submit" class="btn btn-outline-danger" th:if="${#authorization.expression('isAuthenticated()')} and ${childComment.username} == ${#authentication.name}">Delete</button>
+                  </div>
+                </div>
+              </form>
+            </li>
+          </ul>
+
+          <div class="row">
+            <details class="col-md-10 col-lg-9 mb-4">
+              <summary>Comment</summary>
+              <form class="comment-form" th:action="@{/comments/new}" th:method="post">
+                <input type="hidden" class="post-id" th:name="postId" th:value="*{id}" >
+                <input type="hidden" class="parent-comment-id" th:name="parentCommentId" th:value="${comment.id}">
+                <textarea class="form-control comment-textbox" th:name="content" placeholder="Comment.." rows="2" required></textarea>
+                <button class="form-control btn btn-primary mt-2" type="submit">Submit</button>
+              </form>
+            </details>
           </div>
         </li>
       </ul>
-
     </section>
   </div>
 
   <div class="row g-5">
-    <nav aria-label="Page navigation example">
+    <nav id="pagination" aria-label="Page navigation">
       <ul class="pagination">
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Prev">
+          <a class="page-link" href="#" aria-label="Previous" th:href="*{id} - 1 <= 0 ? '#' : |/posts/*{id - 1}|"
+             th:class="'page-link' + (*{id} - 1 <= 0 ? ' disabled' : '')">
             <span aria-hidden="true">&laquo; prev</span>
           </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
+          <a class="page-link" href="#" aria-label="Next" th:href="*{id} + 1 > ${totalCount} ? '#' : |/posts/*{id + 1}|"
+             th:class="'page-link' + (*{id} + 1 > ${totalCount} ? ' disabled' : '')">
             <span aria-hidden="true">next &raquo;</span>
           </a>
         </li>
       </ul>
     </nav>
   </div>
-
 </main>
 
-<footer th:replace="fragments/footer :: footer"></footer>
+<footer th:replace="footer :: footer">
+  <hr>
+  Footer
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
