--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -2,39 +2,43 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Posts</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="ryuu">
+    <title>Board</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="/css/search-bar.css" rel="stylesheet">
+    <link href="/css/posts/table-header.css" rel="stylesheet">
 </head>
 
 <body>
+<header th:replace="header :: header">
+    Header
+    <hr>
+</header>
 
-<header th:replace="fragments/header :: header"></header>
+<main class="container" th:object="${posts}">
 
-<main class="container">
-    <div class="row my-3">
+    <div class="row">
         <div class="card card-margin search-form">
             <div class="card-body p-0">
-                <form id="card search-form">
+                <form id="search-form" th:action="@{/posts}" th:method="get">
                     <div class="row">
                         <div class="col-12">
                             <div class="row no-gutters">
                                 <div class="col-lg-3 col-md-3 col-sm-12 p-0">
-                                    <label for="search-type" hidden>type</label>
-                                    <select class="form-control" id="search-type">
-                                        <option>title</option>
-                                        <option>content</option>
-                                        <option>id</option>
-                                        <option>nickname</option>
-                                        <option>tag</option>
+                                    <label for="search-type" hidden>Type</label>
+                                    <select class="form-control" id="search-type" name="searchType">
+                                        <option th:each="searchType : ${searchTypes}"
+                                                th:value="${searchType.name}"
+                                                th:text="${searchType.description}"
+                                                th:selected="${param.searchType != null && (param.searchType.toString == searchType.name)}">Title</option>
                                     </select>
                                 </div>
                                 <div class="col-lg-8 col-md-6 col-sm-12 p-0">
-                                    <label for="search-value" hidden>value</label>
-                                    <input type="text" placeholder="..." class="form-control" id="search-value" name="search-value">
+                                    <label for="search-value" hidden>Search</label>
+                                    <input type="text" placeholder="Search..." class="form-control" id="search-value" name="searchValue" th:value="${param.searchValue}">
                                 </div>
                                 <div class="col-lg-1 col-md-3 col-sm-12 p-0">
                                     <button type="submit" class="btn btn-base">
@@ -52,50 +56,110 @@
         </div>
     </div>
 
-    <table class="table my-3">
-        <thead>
-        <tr>
-            <th class="col-6">title</th>
-            <th class="col-2">tag</th>
-            <th class="col">createdBy</th>
-            <th class="col">createdAt</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>1st</td>
-            <td>java</td>
-            <td>lee</td>
-            <td>2022-01-01</td>
-        </tr>
-        <tr>
-            <td>2nd</td>
-            <td>c++</td>
-            <td>kim</td>
-            <td>2022-01-02</td>
-        </tr>
-        <tr>
-            <td>3rd</td>
-            <td>python</td>
-            <td>park</td>
-            <td>2022-01-03</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <table class="table" id="post-table">
+            <thead>
+            <tr>
+                <th class="title col-6">
+                    <a th:text="#{title}" th:href="@{/posts(
+                        page=${posts.number},
+                        sort='title' + (*{sort.getOrderFor('title')} != null ? (*{sort.getOrderFor('title').direction.name} != 'DESC' ? ',desc' : '') : ''),
+                        searchType=${param.searchType},
+                        searchValue=${param.searchValue}
+                    )}">
+                        Title
+                    </a>
+                </th>
+                <th class="tag col-2">
+                    <a th:text="#{tag}" th:href="@{/posts(
+                        page=${posts.number},
+                        sort='tags' + (*{sort.getOrderFor('tags')} != null ? (*{sort.getOrderFor('tags').direction.name} != 'DESC' ? ',desc' : '') : ''),
+                        searchType=${param.searchType},
+                        searchValue=${param.searchValue}
+                    )}">
+                        Tag
+                    </a>
+                </th>
+                <th class="user-id">
+                    <a th:text="#{created_by}" th:href="@{/posts(
+                        page=${posts.number},
+                        sort='userAccount.username' + (*{sort.getOrderFor('userAccount.username')} != null ? (*{sort.getOrderFor('userAccount.username').direction.name} != 'DESC' ? ',desc' : '') : ''),
+                        searchType=${param.searchType},
+                        searchValue=${param.searchValue}
+                    )}">
+                        Creator
+                    </a>
+                </th>
+                <th class="created-at">
+                    <a th:text="#{created_at}" th:href="@{/posts(
+                        page=${posts.number},
+                        sort='createdAt' + (*{sort.getOrderFor('createdAt')} != null ? (*{sort.getOrderFor('createdAt').direction.name} != 'DESC' ? ',desc' : '') : ''),
+                        searchType=${param.searchType},
+                        searchValue=${param.searchValue}
+                    )}">
+                        Date
+                    </a>
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="post : ${posts}">
+                <td class="title">
+                    <a th:text="${post.title}" th:href="@{'/posts/' + ${post.id}}" />
+                </td>
+                <td class="title">
+                    <span class="badge text-bg-secondary mx-1" th:each="tag : ${post.tags}">
+                        <a class="text-reset"
+                            th:text="${tag}"
+                            th:href="@{/posts(searchType=${searchTypeTag},searchValue=${tag})}"
+                        />
+                    </span>
+                </td>
+                <td class="user-id" th:text="${post.nickname}">
+                </td>
+                <td class="created-at">
+                    <time th:datetime="${post.createdAt}" th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd')}" />
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
+    <div class="row">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <a class="btn btn-primary me-md-2" role="button" id="write-post" sec:authorize="isAuthenticated()" th:href="@{/posts/form}">New Post</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <nav id="pagination" aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="#" th:text="#{previous}"
+                        th:href="@{/posts(page=${posts.number - 1}, searchType=${param.searchType}, searchValue=${param.searchValue})}"
+                        th:class="'page-link' + (${posts.number} <= 0 ? ' disabled' : '')">
+                        Previous</a>
+                </li>
+                <li class="page-item" th:class="page-item" th:each="pageNumber : ${paginationBarNumbers}">
+                    <a class="page-link" href="#" th:text="${pageNumber + 1}"
+                        th:href="@{/posts(page=${pageNumber}, searchType=${param.searchType}, searchValue=${param.searchValue})}"
+                        th:class="'page-link' + (${pageNumber} == ${posts.number} ? ' disabled' : '')">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#" th:text="#{next}"
+                        th:href="@{/posts(page=${posts.number + 1}, searchType=${param.searchType}, searchValue=${param.searchValue})}"
+                        th:class="'page-link' + (${posts.number} >= ${posts.totalPages - 1} ? ' disabled' : '')">Next</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </main>
 
+<footer th:replace="footer :: footer">
+    <hr>
+    Footer
+</footer>
 
-<footer th:replace="fragments/footer :: footer"></footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
