feat: #16 disable kakao oauth2 login view

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,9 +16,10 @@
             <div class="text-end">
                 <span id="username" class="text-white me-2" sec:authorize="isAuthenticated()" sec:authentication="principal.nickname">username</span>
                 <a role="button" id="login" class="btn btn-outline-light me-2" sec:authorize="!isAuthenticated()" th:href="@{/login}">Login</a>
-                <a role="button" id="kakao-login" class="me-2" sec:authorize="!isAuthenticated()" th:href="@{/oauth2/authorization/kakao}">
-                    <img alt="Kakao Login" src="/images/kakao_login_medium.png">
-                </a>
+<!--                todo: kakao login-->
+<!--                <a role="button" id="kakao-login" class="me-2" sec:authorize="!isAuthenticated()" th:href="@{/oauth2/authorization/kakao}">-->
+<!--                    <img alt="Kakao Login" src="/images/kakao_login_medium.png">-->
+<!--                </a>-->
                 <a role="button" id="logout" class="btn btn-outline-light me-2" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
             </div>
         </div>
